--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col-md-6">
                     <h1 style= "text-align: center; color: white;">KONGU ENGINEERING COLLEGE</h1>
-                     <h6 style="text-align: center; color: white;">(Autonomous)</h6>
+                     <h6 style="text-align: center; color: white;">(Autonomous..)</h6>
                      <h6 style="text-align: center; color: white;">AFFILIATED TO ANNA UNIVERSITY</h6>
                      <h6 style="text-align: center; color: rgb(253, 238, 28);">PERUNDURAI ERODE - 638060 TAMILNADU INDIA</h6>
                 </div>
